# mdk

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/includes/: detectorSerial.hpp
src/models/: detectorSerial.cpp
